# pyra

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  fly.toml  manifesto.md  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security.md
.github/workflows/: ci.yml
benchmarks/: bench_reconciler.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PATCH_PROTOCOL.md  ROADMAP.md  TUTORIAL.md
examples/chat/: README.md  main.py
examples/counter/: main.py
examples/fullstack/: README.md  main.py
examples/todo-app/: main.py
src/pyra/: __init__.py  app.py  auth.py  cli.py  components.py  config.py  db.py  email.py  forms.py  oauth.py  rbac.py  reactive.py  reconciler.py  render.py  ssr.py  state.py  transport.py
tests/: test_app_extras.py  test_auth.py  test_components.py  test_config.py  test_db.py  test_e2e.py  test_email.py  test_forms.py  test_oauth.py  test_rbac.py  test_reactive.py  test_reconciler.py  test_ssr.py  test_state.py  test_transport.py  test_uploads.py
